add orca user guide developer guide